@@ -57,6 +57,7 @@ version 1.9.6, in progress
   the recorded date for a function package
 - Fix bug in ADF test in GUI with data frequency 1: quadratic trend
   case being added even when deselected
+- Increase maximum command-line length to 16384 bytes
 
 2011-04-22 version 1.9.5
 - Add new translation: Greek (Manolis Tzagarakis and Ioannis Venetis)
